ci config update